<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#017501"
    tools:context=".AuthorizationActivity">

    <TextView
        android:id="@+id/text_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#00FFD7"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"/>

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/login"
        android:textColorHint="#99FFFFFF"
        android:textColor="#99FFFFFF"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/user_password_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:textColorHint="#99FFFFFF"
        android:textColor="#99FFFFFF"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_auth"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000000"
        android:text="@string/Login"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_to_reg"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#00FFD7"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"/>

</LinearLayout>